# Wow

./: .gitignore  CMakeLists.txt  Communication.cpp  Communication.h  Dashboard.cpp  Dashboard.h  Decoder.cpp  Decoder.h  Engine.cpp  Engine.h  Manager.cpp  Manager.h  README.md  Renderer.cpp  Renderer.h  WallPaper.cpp  WallPaper.h  common.h  communication.cpp  communication.h  config-cn.toml  dashboard.cpp  dashboard.h  engine.cpp  engine.h  main.cpp  paper.cpp  paper.h  preprocess.cpp  preprocess.h  renderer.cpp  renderer.h
.github/workflows/: site.yml
basic/: CMakeLists.txt  log.hpp
client/: CMakeLists.txt  main.cpp
daemon/: CMakeLists.txt  main.cpp
daemon/include/: player.h
daemon/include/render/: VertexBufferLayout.h
daemon/lib/: core.cpp  player.cpp
daemon/lib/decode/: decoder.cpp
daemon/lib/render/: VertexBufferLayout.cpp  renderer.cpp
doc/: README-CN.md  build_and_install.md  design.md  test.md  构建与安装.md  测试.md  设计.md
generate/: README.md  wlr-layer-shell-unstable-v1-client-protocol.c  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1.xml
site/: i18n.js  index.html  main.js  style.css
site/locales/: en.json  zh.json
test/cases/: previous.test
test/fixtures/config/: config.toml
